feat: 添加服务操作接口
